# Test2Project

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  hello_world_main.c
